ecsact_interpret/test/errors/cluster_invalid_context.ecsact
main package cluster_invalid_context;

component CompA {
	cluster {
		system SysA {}
	}
}
